--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -1,2 +1,11 @@
 # 行前準備
-1
+1. 網路(esim)
+2. 保險
+3. 入境卡填寫(VJW, https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
+
+# 機票資訊
+
+# 住宿
+## 福岡(12/13~12/17)
+* 春吉中洲(https://reurl.cc/zKMR4N)
+## 熊本(12/17~12/21)
