--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -9,3 +9,5 @@
 ## 福岡(12/13~12/17)
 * 春吉中洲(https://reurl.cc/zKMR4N)
 ## 熊本(12/17~12/21)
+* Chuo Ward(https://reurl.cc/KOpWeq)
+* Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
