--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -11,3 +11,22 @@
 ## 熊本(12/17~12/21)
 * Chuo Ward(https://reurl.cc/KOpWeq)
 * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
+
+# 吃
+
+#景點
+##福岡
+
+#熊本
+
+#購物
+##福岡
+* 鳥栖PREMIUM OUTLETS
+* 博多運河城
+* 
+##熊本
+##
+食衣住行
+
+# 相關網址
+* 天氣([這是一個行內樣式的連結](https://www.instagram.com/fukuoka_insider/))
