--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -29,4 +29,4 @@
 食衣住行
 
 # 相關網址
-* 天氣([這是一個行內樣式的連結](https://www.instagram.com/fukuoka_insider/))
+* 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
