--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -4,7 +4,14 @@
 3. 入境卡填寫(VJW, https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
 
 # 機票資訊
-
+* 出發 12/13(六) TPE > FUK
+** 出發時間：14:45 T1
+** 抵達時間：18:00 國際航廈
+** 班機號碼：JX840(星宇航空)
+* 回程 12/21(日) KMJ > TPE
+** 出發時間：11:45
+** 抵達時間：13:25
+** 班機號碼：JX847(星宇航空)
 # 住宿
 ## 福岡(12/13~12/17)
 * 春吉中洲(https://reurl.cc/zKMR4N)
