--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -5,8 +5,8 @@
 
 # 機票資訊
 * 出發 12/13(六) TPE > FUK
-⋅⋅⋅* 出發時間：14:45 T1
-⋅⋅⋅* 抵達時間：18:00 國際航廈
+   * 出發時間：14:45 T1
+   * 抵達時間：18:00 國際航廈
 **出發時間：14:45 T1
 **抵達時間：18:00 國際航廈
 **班機號碼：JX840(星宇航空)
