--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -20,7 +20,7 @@
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
 
 # 吃
-
+* 居酒屋之Niku no Yamasho ()
 * 景點
    * 福岡
       * 123
