--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -34,10 +34,16 @@
 ##福岡
 * 鳥栖PREMIUM OUTLETS
 * 博多運河城
-* 
+* AMU PLAZA ( 3coins 1F、)
 ##熊本
 ##
 食衣住行
 
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
+
+# 其他筆記
+   * 3 coins
+   * AEON (超市)
+   * APP 推薦
+      * LocaSma(https://apps.apple.com/us/app/locasma/id498923187)
