--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -41,9 +41,13 @@
 
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
+* ([Tabelog](https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01))
+* Tabelog (https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01)
 
 # 其他筆記
    * 3 coins
-   * AEON (超市)
+   * AEON (超市) (調味料)
    * APP 推薦
-      * LocaSma(https://apps.apple.com/us/app/locasma/id498923187)
+      * LocaSma(APPLE) (https://apps.apple.com/us/app/locasma/id498923187)
+      * ROKESUMA (Android) (https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
+      * 
