--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -18,6 +18,8 @@
 * 熊本(12/17~12/21)
    * Chuo Ward(https://reurl.cc/KOpWeq)
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
+# 聖誕特輯
+   * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
 
 # 吃
 * 居酒屋之Niku no Yamasho ()
@@ -41,8 +43,7 @@
 
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
-* ([Tabelog](https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01))
-* Tabelog (https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01)
+* 日本餐廳預約網站([Tabelog](https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01))
 
 # 其他筆記
    * 3 coins
