--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -37,7 +37,7 @@
 * 鳥栖PREMIUM OUTLETS
 * 博多運河城
 * AMU PLAZA ( 3coins 1F、)
-* (.[Parco]([https://reurl.cc/1k2reW](https://www.google.com/maps/place/PARCO%E7%A6%8F%E5%B2%A1+%E6%96%B0%E9%A4%A8/@33.5908324,130.3931725,17z/data=!3m2!4b1!5s0x3541918f007b7a1b:0xdb78b1e2fad2b90!4m6!3m5!1s0x354191707a18b597:0xc7de2b4500f1fef1!8m2!3d33.590828!4d130.3980434!16s%2Fg%2F11f7326jzz?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))))
+* ([Parco]([https://reurl.cc/1k2reW](https://www.google.com/maps/place/PARCO%E7%A6%8F%E5%B2%A1+%E6%96%B0%E9%A4%A8/@33.5908324,130.3931725,17z/data=!3m2!4b1!5s0x3541918f007b7a1b:0xdb78b1e2fad2b90!4m6!3m5!1s0x354191707a18b597:0xc7de2b4500f1fef1!8m2!3d33.590828!4d130.3980434!16s%2Fg%2F11f7326jzz?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))))
 ##熊本
 ##
 食衣住行
