--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -1,7 +1,7 @@
 # 行前準備
 1. 網路(esim)
 2. 保險
-3. 入境卡填寫(VJW, https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
+3. [入境卡填寫VJW](https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
 
 # 機票資訊
 * 出發 12/13(六) TPE > FUK
