--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -22,7 +22,7 @@
    * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
 
 # 吃
-* 居酒屋之Niku no Yamasho ()
+* 居酒屋 [Niku no Yamasho](https://www.google.com/maps/place/Niku+no+Yamasho/@33.1833112,130.3988651,10z/data=!3m1!5s0x354191841fd7a791:0xac771c520548c27d!4m10!1m3!11m2!2sUocwMr0zc2KbFMamLgpjDWKWMaV4hA!3e3!3m5!1s0x3541911902895b63:0x34e2e451b9e16fd3!8m2!3d33.585964!4d130.3956038!16s%2Fg%2F11stzqjm3l?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
 * 治一郎甜點
 
 ## 甜點
