--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -18,6 +18,19 @@
 * 熊本(12/17~12/21)
    * Chuo Ward(https://reurl.cc/KOpWeq)
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
+```
+熊本Airbnb 住宿，房東提供的路線指引
+地址：12-10 Shinshigai アメニティ新市街, Chuo Ward, Kumamoto, Kumamoto 860-0803, 日本
+[路線指引](https://www.google.com/maps/place/32%C2%B047'53.6%22N+130%C2%B042'25.4%22E/@32.7982185,130.7070481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d32.7982185!4d130.7070481?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+◆從櫻間千本（ Sakurama Chikumoto ）出發，從熊本機場（ Kumamoto Airport ）乘坐巴士
+附近就有岸町站（ Kishimacho Station ） ，因此請前往岸町站（ Kishimacho Station ）。Kojimachi站分為兩個上下，但您可以無論走哪條路。抵達Kashimacho站後，請按照以下路線從Kashimacho站出發。
+◆如果您從熊本站乘坐電車（電車）從鹿島町出發
+最近的岸町站是電車站。（與汽車或摩託車、路上的火車相同）
+下電車後，進入寫著「SUNROAD SHINSHIGAI」的拱廊街（有屋頂的道路）。
+繼續直行穿過拱廊，在麥當勞的十字路口右轉。
+短途步行並穿過馬路後，我們的旅館位於前面名為「設施新城」的第二棟大樓的五樓。
+同一棟建築物內有一家名為Mizuki的燒肉餐廳。
+```
 # 聖誕特輯
    * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
 
