--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -31,7 +31,7 @@
 短途步行並穿過馬路後，我們的旅館位於前面名為「設施新城」的第二棟大樓的五樓。
 同一棟建築物內有一家名為Mizuki的燒肉餐廳。
 ```
-[路線指引](https://www.google.com/maps/place/32%C2%B047'53.6%22N+130%C2%B042'25.4%22E/@32.7982185,130.7070481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d32.7982185!4d130.7070481?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+[熊本Airbnb路線指引](https://www.google.com/maps/place/32%C2%B047'53.6%22N+130%C2%B042'25.4%22E/@32.7982185,130.7070481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d32.7982185!4d130.7070481?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
 
 # 聖誕特輯
    * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
