--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -17,7 +17,10 @@
    * 春吉中洲(https://reurl.cc/zKMR4N)
 * 熊本(12/17~12/21)
    * Chuo Ward(https://reurl.cc/KOpWeq)
+      * 入住時間：下午4:00 後
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
+      * 入住時間：下午3:00 至 下午11:00
+      *  
 ```
 熊本Airbnb 住宿，房東提供的路線指引
 地址：12-10 Shinshigai アメニティ新市街, Chuo Ward, Kumamoto, Kumamoto 860-0803, 日本
