--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -20,7 +20,6 @@
       * 入住時間：下午4:00 後
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
       * 入住時間：下午3:00 至 下午11:00
-      *  
 ```
 熊本Airbnb 住宿，房東提供的路線指引
 地址：12-10 Shinshigai アメニティ新市街, Chuo Ward, Kumamoto, Kumamoto 860-0803, 日本
@@ -60,7 +59,11 @@
 
 ## 熊本
 
-食衣住行
+# 交通 
+* 鳥栖PREMIUM OUTLETS到熊本 [google規劃地圖](https://www.google.com/maps/dir/%E9%B3%A5%E6%A0%96PREMIUM+OUTLETS+8+Chome-1+Yayoigaoka,+Tosu,+Saga+841-0005%E6%97%A5%E6%9C%AC/Karashimacho,+7+Shinshigai,+%E4%B8%AD%E5%A4%AE%E5%8D%80%E7%86%8A%E6%9C%AC%E5%B8%82%E7%86%8A%E6%9C%AC%E7%B8%A3%E6%97%A5%E6%9C%AC/@33.4060922,130.5107531,18z/am=t/data=!4m19!4m18!1m5!1m1!1s0x3541a28a68e8abcb:0xc7984996cc7a7adf!2m2!1d130.5116369!2d33.4064854!1m5!1m1!1s0x3540f46d9d17d42d:0xabc998a3e74c2c88!2m2!1d130.7050255!2d32.7988821!2m3!6e0!7e2!8j1765994400!3e3!5i2?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+```
+鳥栖PREMIUM OUTLETS > Tosu Premium Outlets(bus)
+```
 
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
