--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -45,6 +45,8 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 # 吃
 * 居酒屋 [Niku no Yamasho](https://www.google.com/maps/place/Niku+no+Yamasho/@33.1833112,130.3988651,10z/data=!3m1!5s0x354191841fd7a791:0xac771c520548c27d!4m10!1m3!11m2!2sUocwMr0zc2KbFMamLgpjDWKWMaV4hA!3e3!3m5!1s0x3541911902895b63:0x34e2e451b9e16fd3!8m2!3d33.585964!4d130.3956038!16s%2Fg%2F11stzqjm3l?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
 * 治一郎甜點
+## 咖啡
+* [藍瓶咖啡 福岡天神店](https://www.google.com/maps/place/%E8%97%8D%E7%93%B6%E5%92%96%E5%95%A1+%E7%A6%8F%E5%B2%A1%E5%A4%A9%E7%A5%9E%E5%BA%97/@33.5873912,130.3970732,17z/data=!3m2!4b1!5s0x354191854238407d:0x65962fd5bb447bd2!4m6!3m5!1s0x3541916258391893:0xfc1321061ac8a8e9!8m2!3d33.5873868!4d130.3996481!16s%2Fg%2F11vjrl8fyn?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
 
 ## 甜點
    * Fuk coffee 冰淇淋布丁 (https://reurl.cc/NNp34p)
