--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -47,6 +47,12 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 * 治一郎甜點
 ## 咖啡
 * [藍瓶咖啡 福岡天神店](https://www.google.com/maps/place/%E8%97%8D%E7%93%B6%E5%92%96%E5%95%A1+%E7%A6%8F%E5%B2%A1%E5%A4%A9%E7%A5%9E%E5%BA%97/@33.5873912,130.3970732,17z/data=!3m2!4b1!5s0x354191854238407d:0x65962fd5bb447bd2!4m6!3m5!1s0x3541916258391893:0xfc1321061ac8a8e9!8m2!3d33.5873868!4d130.3996481!16s%2Fg%2F11vjrl8fyn?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+* [FUGLEN FUKUOKA](https://www.google.com/maps/place/FUGLEN+FUKUOKA/@33.5901141,130.4224973,17z/data=!3m1!4b1!4m6!3m5!1s0x354191e5b6fd7d29:0x5448e398df7c8618!8m2!3d33.5901097!4d130.4250722!16s%2Fg%2F11s5qw09pj?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+   * 必點： 美式黑咖啡、羊奶酪吐司
+## 麵包
+* [Full full HAKATA](https://www.google.com/maps/place/The+Full+Full+Hakata/@33.5898887,130.4099733,17z/data=!3m2!4b1!5s0x354191be4ce7bc3b:0x56804afec272f12f!4m6!3m5!1s0x3541917df96acc09:0x2877f9dd3bca52ef!8m2!3d33.5898843!4d130.4125482!16s%2Fg%2F11s0ngmwln?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+   * 推薦：明太子法棍
+*  [I’m donut ? 福岡店](https://www.google.com/maps/place/I'm+donut%3F+%E7%A6%8F%E5%B2%A1%E5%BA%97/@33.5884305,130.399799,17z/data=!3m2!4b1!5s0x3541919042490997:0x6e180c6eec848952!4m6!3m5!1s0x3541913f6cad07bf:0xcbf3addf4e0de96!8m2!3d33.5884261!4d130.4023739!16s%2Fg%2F11jsvj2sfs?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
 
 ## 甜點
    * Fuk coffee 冰淇淋布丁 (https://reurl.cc/NNp34p)
