--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -62,13 +62,19 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
       * 456
    * 熊本
 
-#購物
-##福岡
+# 購物
+
+## 福岡
 * 鳥栖PREMIUM OUTLETS
 * 博多運河城
-* AMU PLAZA ( 3coins 1F、)
+* AMU PLAZA
+   * 1-5F：HANDS（行李箱/化妝品/背包） 5F：LE TALON女鞋 8F：無印良品 
+* [OIOI博多](https://www.google.com/maps/place/%E5%8D%9A%E5%A4%9A%E4%B8%B8%E4%BA%95OIOI%E7%99%BE%E8%B2%A8/@33.5888895,130.4168773,17z/data=!3m2!4b1!5s0x354191b86e62e40b:0xe058cca02815d770!4m6!3m5!1s0x354191b86f494bbd:0x337c2d29b0bd8c04!8m2!3d33.5888851!4d130.4194522!16s%2Fg%2F11cn8xg9c6?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+   * 8F UNIQLO、B1 超市
 * Parco([Parco](https://www.google.com/maps/place/PARCO%E7%A6%8F%E5%B2%A1+%E6%96%B0%E9%A4%A8/@33.5908324,130.3931725,17z/data=!3m2!4b1!5s0x3541918f007b7a1b:0xdb78b1e2fad2b90!4m6!3m5!1s0x354191707a18b597:0xc7de2b4500f1fef1!8m2!3d33.590828!4d130.3980434!16s%2Fg%2F11f7326jzz?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))
-
+   * 年輕潮牌集中地，新館Beams超大，Barbour、始祖鳥都有。本館B1美食街與大型藥妝店，潮牌街的獨立店（Supreme/Stussy）不支持退税，記得先比價。
+* [大丸福岡天神](https://www.google.com/maps/place/%E5%A4%A7%E4%B8%B8+%E7%A6%8F%E5%B2%A1%E5%A4%A9%E7%A5%9E%E5%BA%97/@33.5886505,130.3986068,17z/data=!3m1!4b1!4m6!3m5!1s0x35419190236c8f81:0xcd12b689c238ad38!8m2!3d33.5886461!4d130.4011817!16s%2Fg%2F1hc1jr0pw?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+   * 奢侈品首選，東館2F有Burberry、克羅心、Moncler，蒙口款式比岩田屋還齊全。本館B1食品街是九州最大DEPACHIKA，可退税+返現，購物美食一次滿足。
 ## 熊本
 
 # 交通 
@@ -83,7 +89,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 
 # 其他筆記
    * 3 coins
-   * AEON (超市) (調味料)
+   * [AEON](https://www.google.com/maps/place/Aeon+Shoppers+Fukuoka/@33.5886724,130.390882,15z/data=!3m1!5s0x3541918dcdc00ce3:0xdb0b423f9c79a1f0!4m10!1m2!2m1!1sAEON!3m6!1s0x3541918dcdc00001:0xd49e74f320e6e853!8m2!3d33.593967!4d130.39834!15sCgRBRU9OIgOIAQFaBiIEYWVvbpIBDWdyb2Nlcnlfc3RvcmWaASRDaGREU1VoTk1HOW5TMFZKUTBGblNVTlVlRkJxZEhOblJSQUKqAVAKDS9nLzExYmM2NnZ5czkKCS9tLzA2eTh4YhABKggiBGFlb24oADIeEAEiGkWMgepA23MErN-YXM17mi8-ftkcv1qnGuimMggQAiIEYWVvbuABAPoBBAgAEDE!16s%2Fg%2F121p64rm?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D) (超市) (調味料)
    * APP 推薦
       * LocaSma(APPLE) (https://apps.apple.com/us/app/locasma/id498923187)
       * ROKESUMA (Android) (https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
