--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -94,3 +94,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
       * LocaSma(APPLE) (https://apps.apple.com/us/app/locasma/id498923187)
       * ROKESUMA (Android) (https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
       * 
+# Youtube Live
+* [福岡・博多駅前](https://www.youtube.com/watch?v=E5R5PPezu7k)
+* [https://www.youtube.com/watch?v=E5R5PPezu7k](https://www.youtube.com/watch?v=8RyR0J8zbbU)
+* [博多・中洲ライブカメラ](https://www.youtube.com/watch?v=iy8A4LMT_TU)
