--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -3,6 +3,12 @@
 2. 保險
 3. [入境卡填寫VJW](https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
 
+# 物品
+* 普拿疼
+* 護唇膏
+* 圍巾
+* 暖暖包?
+
 # 機票資訊
 * 出發 12/13(六) TPE > FUK
    * 出發時間：14:45 T1
