--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -29,7 +29,7 @@
 * 福岡(12/13~12/17)
    * [春吉中洲](https://www.booking.com/hotel/jp/star-residence2.zh-tw.html?aid=356980&label=gog235jc-10CAsodUIPc3Rhci1yZXNpZGVuY2UySDBYA2jnAYgBAZgBM7gBF8gBDNgBA-gBAfgBAYgCAagCAbgCnLvfyAbAAgHSAiRlNWM4YjIwNC0yM2IxLTQxMjYtYTUxYS0zNDkzNWI1YmFiODHYAgHgAgE&sid=373eb9d82eee21524f9af0e32bafaf3f&checkin=2025-12-13&checkout=2025-12-17&dest_id=900047908&dest_type=city&dist=0&group_adults=4&group_children=0&hapos=1&hpos=1&no_rooms=2&req_adults=4&req_children=0&room1=A%2CA&room2=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1763171750&srpvid=3a590d8fec950973&type=total&ucfs=1&chal_t=1763774184912&force_referer=https%3A%2F%2Freurl.cc%2F#no_availability_msg)
 * 熊本(12/17~12/21)
-   * Chuo Ward(https://reurl.cc/KOpWeq)
+   * [Chuo Ward](https://reurl.cc/KOpWeq) [地點指引](https://www.google.com/maps/place/32%C2%B047'53.6%22N+130%C2%B042'25.4%22E/@32.7982185,130.7070481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d32.7982185!4d130.7070481?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D)
       * 入住時間：下午4:00 後
    * Natural Hot Spring Higo no Yu Onyado Nono Kumamoto (https://reurl.cc/GGo6pZ)
       * 入住時間：下午3:00 至 下午11:00
