--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -52,6 +52,19 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 熊本, Chuo Shimotori 2-2-20
 ```
 
+# 交通 
+* 機場到福岡住宿[google規劃](https://www.google.com/maps/dir/%E7%A6%8F%E5%B2%A1%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4+%E6%97%A5%E6%9C%AC%E3%80%92812-0003+Fukuoka,+Hakata+Ward,+Shimousui,+778-1/1-ch%C5%8Dme-5-1+Haruyoshi,+Chuo+Ward,+Fukuoka,+810-0003%E6%97%A5%E6%9C%AC/@33.590602,130.403466,14z/data=!4m18!4m17!1m5!1m1!1s0x35419016426901ad:0x16e67f46584e1fb7!2m2!1d130.4490906!2d33.5849988!1m5!1m1!1s0x354191984c415b67:0x4cd1016ceb2cf278!2m2!1d130.4086073!2d33.5829931!2m3!6e0!7e2!8j1765652400!3e3?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D)
+```
+福岡機場線 > 福岡 > 轉七隈線 > 搭到渡邊通 > 步行
+```
+![福岡機場2永吉中洲](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E7%A6%8F%E5%B2%A1%E6%A9%9F%E5%A0%B42%E6%98%A5%E5%90%89%E4%B8%AD%E6%B4%B2google%E8%B7%AF%E7%B7%9A.JPG)
+* 福岡到鳥栖PREMIUM OUTLETS
+* 鳥栖PREMIUM OUTLETS到熊本 [google規劃地圖](https://www.google.com/maps/dir/%E9%B3%A5%E6%A0%96PREMIUM+OUTLETS+8+Chome-1+Yayoigaoka,+Tosu,+Saga+841-0005%E6%97%A5%E6%9C%AC/Karashimacho,+7+Shinshigai,+%E4%B8%AD%E5%A4%AE%E5%8D%80%E7%86%8A%E6%9C%AC%E5%B8%82%E7%86%8A%E6%9C%AC%E7%B8%A3%E6%97%A5%E6%9C%AC/@33.4060922,130.5107531,18z/am=t/data=!4m19!4m18!1m5!1m1!1s0x3541a28a68e8abcb:0xc7984996cc7a7adf!2m2!1d130.5116369!2d33.4064854!1m5!1m1!1s0x3540f46d9d17d42d:0xabc998a3e74c2c88!2m2!1d130.7050255!2d32.7988821!2m3!6e0!7e2!8j1765994400!3e3!5i2?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
+```
+鳥栖PREMIUM OUTLETS > Tosu Premium Outlets(bus) > Tosu Sta.(bus) > 鳥栖車站 > 新鳥栖 > Kumamoto Station > Karashimacho > 
+```
+----- 交通(end) -----  
+
 # 聖誕特輯
    * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
 
@@ -90,17 +103,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
    * 奢侈品首選，東館2F有Burberry、克羅心、Moncler，蒙口款式比岩田屋還齊全。本館B1食品街是九州最大DEPACHIKA，可退税+返現，購物美食一次滿足。
 ## 熊本
 
-# 交通 
-* 機場到福岡住宿[google規劃](https://www.google.com/maps/dir/%E7%A6%8F%E5%B2%A1%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4+%E6%97%A5%E6%9C%AC%E3%80%92812-0003+Fukuoka,+Hakata+Ward,+Shimousui,+778-1/1-ch%C5%8Dme-5-1+Haruyoshi,+Chuo+Ward,+Fukuoka,+810-0003%E6%97%A5%E6%9C%AC/@33.590602,130.403466,14z/data=!4m18!4m17!1m5!1m1!1s0x35419016426901ad:0x16e67f46584e1fb7!2m2!1d130.4490906!2d33.5849988!1m5!1m1!1s0x354191984c415b67:0x4cd1016ceb2cf278!2m2!1d130.4086073!2d33.5829931!2m3!6e0!7e2!8j1765652400!3e3?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D)
-```
-福岡機場線 > 福岡 > 轉七隈線 > 搭到渡邊通 > 步行
-```
-![福岡機場2永吉中洲](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E7%A6%8F%E5%B2%A1%E6%A9%9F%E5%A0%B42%E6%98%A5%E5%90%89%E4%B8%AD%E6%B4%B2google%E8%B7%AF%E7%B7%9A.JPG)
-* 福岡到鳥栖PREMIUM OUTLETS
-* 鳥栖PREMIUM OUTLETS到熊本 [google規劃地圖](https://www.google.com/maps/dir/%E9%B3%A5%E6%A0%96PREMIUM+OUTLETS+8+Chome-1+Yayoigaoka,+Tosu,+Saga+841-0005%E6%97%A5%E6%9C%AC/Karashimacho,+7+Shinshigai,+%E4%B8%AD%E5%A4%AE%E5%8D%80%E7%86%8A%E6%9C%AC%E5%B8%82%E7%86%8A%E6%9C%AC%E7%B8%A3%E6%97%A5%E6%9C%AC/@33.4060922,130.5107531,18z/am=t/data=!4m19!4m18!1m5!1m1!1s0x3541a28a68e8abcb:0xc7984996cc7a7adf!2m2!1d130.5116369!2d33.4064854!1m5!1m1!1s0x3540f46d9d17d42d:0xabc998a3e74c2c88!2m2!1d130.7050255!2d32.7988821!2m3!6e0!7e2!8j1765994400!3e3!5i2?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
-```
-鳥栖PREMIUM OUTLETS > Tosu Premium Outlets(bus) > Tosu Sta.(bus) > 鳥栖車站 > 新鳥栖 > Kumamoto Station > Karashimacho > 
-```
+
 
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
