--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -114,8 +114,8 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
    * 3 coins
    * [AEON](https://www.google.com/maps/place/Aeon+Shoppers+Fukuoka/@33.5886724,130.390882,15z/data=!3m1!5s0x3541918dcdc00ce3:0xdb0b423f9c79a1f0!4m10!1m2!2m1!1sAEON!3m6!1s0x3541918dcdc00001:0xd49e74f320e6e853!8m2!3d33.593967!4d130.39834!15sCgRBRU9OIgOIAQFaBiIEYWVvbpIBDWdyb2Nlcnlfc3RvcmWaASRDaGREU1VoTk1HOW5TMFZKUTBGblNVTlVlRkJxZEhOblJSQUKqAVAKDS9nLzExYmM2NnZ5czkKCS9tLzA2eTh4YhABKggiBGFlb24oADIeEAEiGkWMgepA23MErN-YXM17mi8-ftkcv1qnGuimMggQAiIEYWVvbuABAPoBBAgAEDE!16s%2Fg%2F121p64rm?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D) (超市) (調味料)
    * APP 推薦
-      * LocaSma(APPLE) (https://apps.apple.com/us/app/locasma/id498923187)
-      * ROKESUMA (Android) (https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
+      * [LocaSma, Apple](https://apps.apple.com/us/app/locasma/id498923187)
+      * [ROKESUMA, Android](https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
       * 
 # Youtube Live
 * [福岡・博多駅前](https://www.youtube.com/watch?v=E5R5PPezu7k)
