--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -1,5 +1,6 @@
 # 車套票
-* [福岡] to [鳥栖PREMIUM OUTLETS]
+* [福岡] to [鳥栖PREMIUM OUTLETS] [線上購票](https://www.highwaybus.com/gp/index)
+   * 帳號:t9418032、密碼:@......
 
 # 行前準備
 1. 網路(esim)
