--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -1,6 +1,7 @@
-# 車套票
+# Tickets
 * [福岡] to [鳥栖PREMIUM OUTLETS] [線上購票](https://www.highwaybus.com/gp/index)
    * 帳號:t9....、密碼:@......
+   * 已預訂，尚未付款 [文件](https://github.com/ccVolleyball/fukuoka_plan/blob/main/tickets/%E7%A6%8F%E5%B2%A1%E5%88%B0outlet%E5%B7%B4%E5%A3%AB%E9%A0%90%E5%AE%9A.pdf) 
 
 # 行前準備
 1. 網路(esim)
