--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -119,7 +119,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
    * APP 推薦
       * [LocaSma, Apple](https://apps.apple.com/us/app/locasma/id498923187)
       * [ROKESUMA, Android](https://play.google.com/store/apps/details?id=jp.d_advantage.locasma&hl=zh_TW)
-      * 
+* [福岡到outlet交通攻略](https://gototravel.tw/tosu-premium-outlets-transport/)
 # Youtube Live
 * [福岡・博多駅前](https://www.youtube.com/watch?v=E5R5PPezu7k)
 * [ＪＲ博多駅前](https://www.youtube.com/watch?v=8RyR0J8zbbU)
