--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -1,7 +1,15 @@
 # Tickets
 * [福岡] to [鳥栖PREMIUM OUTLETS] [線上購票](https://www.highwaybus.com/gp/index)
    * 帳號:t9....、密碼:@......
-   * 已預訂，尚未付款 [文件](https://github.com/ccVolleyball/fukuoka_plan/blob/main/tickets/%E7%A6%8F%E5%B2%A1%E5%88%B0outlet%E5%B7%B4%E5%A3%AB%E9%A0%90%E5%AE%9A.pdf) 
+   * 已預訂，尚未付款 [文件](https://github.com/ccVolleyball/fukuoka_plan/blob/main/tickets/%E7%A6%8F%E5%B2%A1%E5%88%B0outlet%E5%B7%B4%E5%A3%AB%E9%A0%90%E5%AE%9A.pdf)
+* [北九州 JR PASS](https://www.jrkyushu.co.jp/chinese/railpass/railpass.html)
+   * 價格：15000¥/3日、17000¥/5日
+   * 乘坐範圍
+      * 普通列車
+      * 特快列車
+      * 九州新幹線（博多～熊本）
+      * 西九州新幹線（武雄溫泉～長崎）
+      * 注意：不適用新幹線（小倉～博多）、地下鐵、公車，或其他公司、組織營運的鐵路。
 ![訂票資訊](https://github.com/ccVolleyball/fukuoka_plan/blob/main/tickets/%E7%A6%8F%E5%B2%A1%E5%88%B0outlet%E5%B7%B4%E5%A3%AB%E9%A0%90%E5%AE%9A%E7%B4%80%E9%8C%84.JPG)
 # 行前準備
 1. 網路(esim)
