--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -12,6 +12,7 @@
       * 九州新幹線（博多～熊本）
       * 西九州新幹線（武雄溫泉～長崎）
       * 注意：不適用新幹線（小倉～博多）、地下鐵、公車，或其他公司、組織營運的鐵路。
+  * [訂票網站](https://kyushurailpass.jrkyushu.co.jp/reserve/RailPassPurchaseInputPage?7)
 # 行前準備
 1. 網路(esim)
 2. 保險
