--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -77,7 +77,8 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 ```
 鳥栖PREMIUM OUTLETS > Tosu Premium Outlets(bus) > Tosu Sta.(bus) > 鳥栖車站 > 新鳥栖 > Kumamoto Station > Karashimacho > 
 ```
-* 熊本住宿到熊本機場  
+* 熊本住宿到熊本機場
+![google規劃](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E5%88%B0%E7%86%8A%E6%9C%AC%E8%BB%8A%E7%AB%99%E7%9A%84google%E8%A6%8F%E5%8A%83.jpg) 
 ----- 交通(end) -----  
 
 # 聖誕特輯
