--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -101,7 +101,17 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 * 景點
    * 福岡
       * 櫛田神社(附近：上川端通商店街、博多運河城、中洲屋台、[I'm donut](https://www.google.com/maps/place/I'm+donut%3F+%E7%A6%8F%E5%B2%A1%E5%BA%97/@33.5874229,130.3915986,15.4z/data=!3m1!5s0x3541919042490997:0x6e180c6eec848952!4m6!3m5!1s0x3541913f6cad07bf:0xcbf3addf4e0de96!8m2!3d33.5884261!4d130.4023739!16s%2Fg%2F11jsvj2sfs?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))
-      * 456
+  * 由布院
+     * 金鱗湖
+     * 湯之坪街道
+     * 由布院花卉村
+     * 天祖神社
+     * 湯布院昭和館
+     * 由布院遊客中心
+     * 橡實之森 由布院店
+     * 由布岳
+![由布院景點地圖](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E7%94%B1%E5%B8%83%E9%99%A2%E6%99%AF%E9%BB%9E%E5%9C%B0%E5%9C%96.jpg)
+
    * 熊本
 
 # 購物
