--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -134,9 +134,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 # 相關網址
 * 天氣([fukuoka_insider](https://www.instagram.com/fukuoka_insider/))
 * 日本餐廳預約網站([Tabelog](https://tabelog.com/tw/?cid=inb_meta_rt_top_taiwan_tw_01))
-* [阿蘇火山](https://www.aso-volcano.jp/chinese/index.html
-<img width="902" height="88" alt="image" src="https://github.com/user-attachments/assets/bc083049-e5f9-4df6-a68e-eed5436e848f" />
-)
+* [阿蘇火山](https://www.aso-volcano.jp/chinese/index.html)
 
 # 其他筆記
    * 3 coins
