--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -98,21 +98,31 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 
 ## 甜點
    * Fuk coffee 冰淇淋布丁 (https://reurl.cc/NNp34p)
-* 景點
-   * 福岡
-      * 櫛田神社(附近：上川端通商店街、博多運河城、中洲屋台、[I'm donut](https://www.google.com/maps/place/I'm+donut%3F+%E7%A6%8F%E5%B2%A1%E5%BA%97/@33.5874229,130.3915986,15.4z/data=!3m1!5s0x3541919042490997:0x6e180c6eec848952!4m6!3m5!1s0x3541913f6cad07bf:0xcbf3addf4e0de96!8m2!3d33.5884261!4d130.4023739!16s%2Fg%2F11jsvj2sfs?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))
-  * 由布院
-     * 金鱗湖
-     * 湯之坪街道
-     * 由布院花卉村
-     * 天祖神社
-     * 湯布院昭和館
-     * 由布院遊客中心
-     * 橡實之森 由布院店
-     * 由布岳
+## 景點
+### 福岡
+* 櫛田神社(附近：上川端通商店街、博多運河城、中洲屋台、[I'm donut](https://www.google.com/maps/place/I'm+donut%3F+%E7%A6%8F%E5%B2%A1%E5%BA%97/@33.5874229,130.3915986,15.4z/data=!3m1!5s0x3541919042490997:0x6e180c6eec848952!4m6!3m5!1s0x3541913f6cad07bf:0xcbf3addf4e0de96!8m2!3d33.5884261!4d130.4023739!16s%2Fg%2F11jsvj2sfs?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D))
+* 由布院
+  * 金鱗湖
+  * 湯之坪街道
+  * 由布院花卉村
+  * 天祖神社
+  * 湯布院昭和館
+  * 由布院遊客中心
+  * 橡實之森 由布院店
+  * 由布岳
 ![由布院景點地圖](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E7%94%B1%E5%B8%83%E9%99%A2%E6%99%AF%E9%BB%9E%E5%9C%B0%E5%9C%96.jpg)
 
-   * 熊本
+### 熊本 
+* 阿蘇火山
+   * 開放時間：12月1日~3月19日 AM9:00~PM4:30 ※PM5:00關門
+   * [阿蘇火山天氣與噴火警戒](https://emergency-weather.yahoo.co.jp/weather/zh-TW/volcano/503/)
+   * [阿蘇火山火口規制情報](https://www.aso-volcano.jp/)
+   * [阿蘇火山火口之限制遊覽情報](https://www.aso-volcano.jp/chinese/index.html)
+```
+脆友心得
+遇到天氣不佳，建議在便利商店購買輕便雨衣，火山口風大撐不了傘
+```
+
 
 # 購物
 
