--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -112,7 +112,11 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
   * 橡實之森 由布院店
   * 由布岳
 ![由布院景點地圖](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E7%94%B1%E5%B8%83%E9%99%A2%E6%99%AF%E9%BB%9E%E5%9C%B0%E5%9C%96.jpg)
-
+* 太宰府天滿宮
+  * 開放時間：6:30~18:30
+  * 交通方式：
+     * 【博多站→太宰府天滿宮】可搭乘JR電車至JR「二日市站」，再徒步至西鐵「二日市站」搭乘西鐵太宰府線至「太宰府站」下車，約需40分鐘。
+     * 【西鐵福岡天神站→太宰府天滿宮】搭乘西鐵天神大牟田線至「二日市站」，再從「二日市站」搭乘西鐵太宰府線至「太宰府站」下車，約需30分鐘。
 ### 熊本 
 * 阿蘇火山
    * 開放時間：12月1日~3月19日 AM9:00~PM4:30 ※PM5:00關門
