--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -117,6 +117,17 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
   * 交通方式：
      * 【博多站→太宰府天滿宮】可搭乘JR電車至JR「二日市站」，再徒步至西鐵「二日市站」搭乘西鐵太宰府線至「太宰府站」下車，約需40分鐘。
      * 【西鐵福岡天神站→太宰府天滿宮】搭乘西鐵天神大牟田線至「二日市站」，再從「二日市站」搭乘西鐵太宰府線至「太宰府站」下車，約需30分鐘。
+  * 推薦
+     * 與菅原道真淵源深厚！求智慧必摸的「御神牛」
+     * 象徵淨化身心的「太鼓橋」＆「心字池」
+     * 菅原道真長眠之地！供奉天神的「御本殿」
+     * 參觀珍貴罕見文物就到「寶物殿」
+     * 紅色鳥居遍佈的能量景點「天開稻荷神社」
+     * 合格開運小物！「太宰府天滿宮」必求御守、御神籤、御朱印
+     * 到「太宰府天滿宮」必吃美食＆必買伴手禮推薦
+        * 梅枝餅
+        * 包著紫蘇口味的求肥麻糬的「鷽鳥麻糬」（うその餅）
+        * 「明太子法國麵包」（明太子フランスパン）
 ### 熊本 
 * 阿蘇火山
    * 開放時間：12月1日~3月19日 AM9:00~PM4:30 ※PM5:00關門
