--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -144,7 +144,10 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 
 ## 福岡
 * 鳥栖PREMIUM OUTLETS
-* 博多運河城
+* [博多運河城](https://canalcity.co.jp/zh-tw)
+   * 營業時間：商店為 10:00～21:00、餐廳為 11:00～23:00
+   * [樓層介紹](https://github.com/ccVolleyball/fukuoka_plan/blob/main/files/%E5%8D%9A%E5%A4%9A%E9%81%8B%E6%B2%B3%E5%9F%8E_floormap_zh-tw.pdf)
+
 * AMU PLAZA
    * 1-5F：HANDS（行李箱/化妝品/背包） 5F：LE TALON女鞋 8F：無印良品 
 * [OIOI博多](https://www.google.com/maps/place/%E5%8D%9A%E5%A4%9A%E4%B8%B8%E4%BA%95OIOI%E7%99%BE%E8%B2%A8/@33.5888895,130.4168773,17z/data=!3m2!4b1!5s0x354191b86e62e40b:0xe058cca02815d770!4m6!3m5!1s0x354191b86f494bbd:0x337c2d29b0bd8c04!8m2!3d33.5888851!4d130.4194522!16s%2Fg%2F11cn8xg9c6?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
