--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -17,6 +17,7 @@
 1. 網路(esim)
 2. 保險
 3. [入境卡填寫VJW](https://services.digital.go.jp/zh-cmn-hant/visit-japan-web/)
+4. 換日幣
 
 # 物品
 * 普拿疼
@@ -29,6 +30,8 @@
 * 保溫瓶
 * 真空袋
 * 口罩
+* 洗面乳、洗髮精、洗衣球、洗衣袋
+* 吹風機
 
 # 機票資訊
 * 出發 12/13(六) TPE > FUK
@@ -156,6 +159,12 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
    * 年輕潮牌集中地，新館Beams超大，Barbour、始祖鳥都有。本館B1美食街與大型藥妝店，潮牌街的獨立店（Supreme/Stussy）不支持退税，記得先比價。
 * [大丸福岡天神](https://www.google.com/maps/place/%E5%A4%A7%E4%B8%B8+%E7%A6%8F%E5%B2%A1%E5%A4%A9%E7%A5%9E%E5%BA%97/@33.5886505,130.3986068,17z/data=!3m1!4b1!4m6!3m5!1s0x35419190236c8f81:0xcd12b689c238ad38!8m2!3d33.5886461!4d130.4011817!16s%2Fg%2F1hc1jr0pw?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
    * 奢侈品首選，東館2F有Burberry、克羅心、Moncler，蒙口款式比岩田屋還齊全。本館B1食品街是九州最大DEPACHIKA，可退税+返現，購物美食一次滿足。
+
+```
+博多運河城:  
+營業時間：商店為 10:00～21:00、餐廳為 11:00～23:00
+   * [樓層介紹](https://github.com/ccVolleyball/fukuoka_plan/blob/main/files/%E5%8D%9A%E5%A4%9A%E9%81%8B%E6%B2%B3%E5%9F%8E_floormap_zh-tw.pdf)
+```
 ## 熊本
 
 
