--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -85,7 +85,7 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 ![google規劃](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E5%88%B0%E7%86%8A%E6%9C%AC%E8%BB%8A%E7%AB%99%E7%9A%84google%E8%A6%8F%E5%8A%83.jpg) 
 ----- 交通(end) -----  
 
-# [聖誕特輯]((https://christmas-advent.jp/cht/?lang=zh-TW))
+# [聖誕特輯](https://christmas-advent.jp/cht/?lang=zh-TW)
 * 福岡天神聖誕市集([點我](https://www.threads.com/@wangbainian/post/DREgsZzEu3i?xmt=AQF0QC1x_uKKPdM58t_bB2liIl7ay-N78Pvp1s5MAEtzYg))
 * 博多聖誕市集 - 「CHRISTMAS MARKET in 光の街・博多」
 * 天神聖誕市集 - 「TENJIN CHRISTMAS MARKET」
