--- a/2025福岡熊本_本文.md
+++ b/2025福岡熊本_本文.md
@@ -100,7 +100,30 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
    * 熊本車站聖誕市集
    * 小倉燈光秀
    * 小倉聖誕市集
-
+```
+CHRISTMAS MARKET KUMAMOTO
+・日期：2025年11月21日（五）～12月25日（四）
+※ 熊本車站會場12月9日、12月10日暫停
+※ 花畑廣場會場僅於12月2日～12月25日期間舉行
+※ 光之森會場僅於12月12日～12月21日期間舉行
+・時間：【平日】16:00〜22:00【週末】11:00〜22:00（※ 花畑廣場延長至22:00結束）
+・地點：熊本車站前、花畑廣場、菊陽町光之森公園
+・交通方式：JR「熊本」站、西鐵天神大牟田線「花畑」站、JR「光之森」站出站即達
+```
+```
+CHRISTMAS MARKET in 光の街・博多
+・點燈日期：2025年11月1日（六）～12月25日（四）
+・點燈時間：【11/1】19:00～23:00【平日】16:45～23:00【12/1開始】12:00～23:00
+・點燈地點：博多站前
+・交通方式：JR「博多」站出站即達
+```
+```
+TENJIN CHRISTMAS MARKET
+・點燈日期：2025年11月15日（六）〜12月25日（四）
+・點燈時間：【平日】17:00～23:00【假日】12:00～23:00
+・點燈地點：福岡市役所西側ふれあい広場（福岡市中央区天神1-8-1）
+・交通方式：地下鐵空港線「天神」站徒步約3分鐘、七隈線「天神南」站徒步約2分鐘
+```
 
 # 吃
 * 居酒屋 [Niku no Yamasho](https://www.google.com/maps/place/Niku+no+Yamasho/@33.1833112,130.3988651,10z/data=!3m1!5s0x354191841fd7a791:0xac771c520548c27d!4m10!1m3!11m2!2sUocwMr0zc2KbFMamLgpjDWKWMaV4hA!3e3!3m5!1s0x3541911902895b63:0x34e2e451b9e16fd3!8m2!3d33.585964!4d130.3956038!16s%2Fg%2F11stzqjm3l?entry=ttu&g_ep=EgoyMDI1MTExMi4wIKXMDSoASAFQAw%3D%3D)
@@ -176,7 +199,9 @@ Natural Hot Spring Higo no Yu Onyado Nono Kumamoto 地址
 
 
 ## 熊本
-
+* AMU PLAZA
+   * [HalloDay超市](https://gogojp.tw/halloday-kumamoto/)
+   * GU
 
 
 # 相關網址
