--- a/2025_太宰府.md
+++ b/2025_太宰府.md
@@ -5,3 +5,6 @@
 [FUKUOKA１DAY PASS](http://www.ensen24.jp/kippu/tc/1day-pass/) 2800日圓/天，可乘坐
 * 西鐵電車
 * 西鐵巴士
+
+## 景點指南
+![景點指南](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E5%A4%AA%E5%AE%B0%E5%BA%9C2025_%E6%99%AF%E9%BB%9E%E6%8C%87%E5%8D%97.JPG)
