--- a/2025_太宰府.md
+++ b/2025_太宰府.md
@@ -1,5 +1,7 @@
 # 太宰府
 
+目前御本殿施工中
+
 ## 交通方式
 搭乘西鐵電車，西鐵福岡天神站 > 太宰府 (單程420日圓)  
 [FUKUOKA１DAY PASS](http://www.ensen24.jp/kippu/tc/1day-pass/) 2800日圓/天，可乘坐
@@ -8,3 +10,5 @@
 
 ## 景點指南
 ![景點指南](https://github.com/ccVolleyball/fukuoka_plan/blob/main/images/%E5%A4%AA%E5%AE%B0%E5%BA%9C2025_%E6%99%AF%E9%BB%9E%E6%8C%87%E5%8D%97.JPG)
+
+* YT 推薦可搭公車上山到竈門神社，再走下山 [連結](https://www.youtube.com/shorts/Xk3Ite-yi4w)
